websocket exercise added
