# src/main/java/katka/university/ws/ChatController.java
@@ -4,16 +4,18 @@ import hu.webuni.university.api.ChatControllerApi;
 import hu.webuni.university.api.model.ChatMessage;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
+import org.springframework.messaging.handler.annotation.MessageMapping;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.stereotype.Controller;
 
-@RestController
+@Controller
 @RequiredArgsConstructor
 public class ChatController implements ChatControllerApi {
 
   private final SimpMessagingTemplate messagingTemplate;
 
-  @Override //nem kell? @MessageMapping("/chat")
+  @Override // kell? @MessageMapping("/chat")
+  @MessageMapping
   public ResponseEntity<Void> onChatMessage(ChatMessage chatMessage) {
     this.messagingTemplate.convertAndSend("topic/courseChat" + chatMessage.getCourseId(),
         String.format("%s: %s", chatMessage.getSender(), chatMessage.getText()));
